# DevOpsAgent-cli

./: .env.example  .gitignore  ARCHITECTURE.md  GCC_git.md  Langfuse_use.md  PRD.md  README.md  benchmark_e2e.py  benchmark_e2e_final.txt  benchmark_e2e_final_v2.txt  benchmark_e2e_results.txt  benchmark_final.txt  benchmark_final_hardened_v2.txt  benchmark_final_hardened_v3.txt  benchmark_final_prod_results.txt  benchmark_final_results.txt  benchmark_local.py  benchmark_performance.py  benchmark_production_final.py  benchmark_results.txt  benchmark_robust_e2e.py  debug_vector.py  docker-compose.langfuse.yml  final_verify.py  pyproject.toml  test_results.txt  test_results_utf8.txt  user_guide.md  verification_output.txt  verify_chat_results.txt  verify_dist_results.txt  verify_loop_results.txt  verify_ultra_results.txt  verify_ultra_summary.txt  verify_ux_results.txt
skills/core/: SKILL.md
skills/docker/: SKILL.md
skills/git/: SKILL.md
skills/helm/: SKILL.md
skills/kubectl/: SKILL.md
src/: config.py  ollama_client.py
src/agent/: core.py  env.py  fast_tools.py  graph_core.py  intent_parser.py  render.py  sanitizer.py
src/cli/: api.py  export.py  main.py  mode_controller.py
src/gcc/: checkpointer.py  graph.py  ingestor.py  log.py  session.py  storage.py
src/intelligence/: __init__.py  cache.py  database.py  metadata.py  observability.py  registry.py  utils.py  vector.py
src/mcp/: server.py
src/skills/: parser.py
src/tests/: find_langfuse.py  probe_dims.py  robust_test.py  search_code.py  sync_helm.py  test_api.py  test_audit_chaos.py  test_collab.py  (+10 more)
(+12 files in other folders)
